contrast fixed

--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -51,8 +51,13 @@ h3 {
     padding: 10px;
     /* text-align: center; */
     background: #005C69;
-    color: #071013;
+    color: white;
 }
+a  {
+    text-decoration: underline;
+    color: black;
+}
+
 section > div {
     padding: 0 10px;
 }
